# snowflake-mongodb-connector

./: .envrc  .gitignore  CHANGELOG.md  README.md  pyproject.toml  release-please-config.json  snowflake.yml
.github/workflows/: checks.yml  deploy.yml  release-please.yml
app/: README.md  manifest.yml  pyproject.toml  setup_script.sql
app/procedures/: connection.py  procedures.py  utils.py
app/scripts/: core-00-data.sql  core-01-code.sql  core-02-code_public.sql  main.sql
tests/procedures/: test_utils.py
